--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
-  "name": "front-5th-chapter2-1",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "start:basic": "vite serve --open ./index.basic.html",
-    "start:advanced": "vite serve --open ./index.advanced.html",
-    "test": "vitest",
-    "test:basic": "vitest basic.test.js",
-    "test:advanced": "vitest advanced.test.js",
-    "test:ui": "vitest --ui"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.0",
-    "@vitest/ui": "^3.1.1",
-    "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.0.0",
-    "jsdom": "^26.0.0",
-    "prettier": "3.5.3",
-    "typescript": "^5.8.3",
-    "vite": "^6.2.6",
-    "vitest": "^3.1.1"
-  },
-  "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  }
+    "name": "front-5th-chapter2-1",
+    "homepage": "https://kanghyew0n.github.io/front_5th_chapter2-1/",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "start:basic": "vite serve --open ./index.basic.html",
+        "start:advanced": "vite serve --open ./index.advanced.html",
+        "test": "vitest",
+        "test:basic": "vitest basic.test.js",
+        "test:advanced": "vitest advanced.test.js",
+        "test:ui": "vitest --ui",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.24.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/user-event": "^14.6.1",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "@vitejs/plugin-react": "^4.4.0",
+        "@vitest/ui": "^3.1.1",
+        "eslint": "^9.24.0",
+        "eslint-config-prettier": "^10.1.2",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-react": "^7.37.5",
+        "globals": "^16.0.0",
+        "jsdom": "^26.0.0",
+        "prettier": "3.5.3",
+        "typescript": "^5.8.3",
+        "vite": "^6.2.6",
+        "vitest": "^3.1.1"
+    },
+    "dependencies": {
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0"
+    }
 }
